test/sema/typeck/ref/ref-type-mismatch.out
error: Argument expects value of type `ref Int32` but got `ref Bool`.
--> ref-type-mismatch.dora:5:14
 | fn test() {
 |     let a: Bool = true;
 |     take_ref(ref a);
                ~~~~~
 | }
 | 
1 error found.
