test/sema/typeck/ref/ref-type-mismatch.dora
fn take_ref(r: ref Int32) {}

fn test() {
    let a: Bool = true;
    take_ref(ref a);
}
